# EmuEZ

./: .gitignore  CMakeLists.txt  README.md  all-build-debug.bat  all-build-release.bat
Code/Dev/Win/: CMakeLists.txt
Code/Dev/Win/include/: Core.hpp  EmulationManager.hpp  Renderer.hpp
Code/Dev/Win/src/: Core.cpp  UI.cpp
Code/Emulators/Base/: CMakeLists.txt
Code/Emulators/Base/include/: Base.hpp
Code/Emulators/GB/: CMakeLists.txt
Code/Emulators/GB/include/: GB.hpp  GBCart.hpp
Code/Emulators/GB/src/: GB.cpp  GBCart.cpp
Code/Emulators/PSX/: CMakeLists.txt
Code/Emulators/PSX/include/: PSX.hpp
Code/Emulators/PSX/src/: PSX.cpp
Code/Util/: CMakeLists.txt
Code/Util/include/: Definitions.hpp  IO.hpp
Code/Util/src/: IO.cpp
EmuEZ/: Config.xml  imgui.ini
EmuEZ/SaveStates/: DrMario.sav  Tetris.sav  loz.sav
EmuEZ/Saves/: loz.sav
EmuEZ/Shaders/ImGUI/: frag.spv  shader.vert  vert.spv
